--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,3 +41,11 @@ generator-holograms:
       - "&a&l❇ Émeraudes ❇"
       - "&fNiveau &e{tier}"
       - "&fApparition dans &a{time}s"
+npc-skins:
+  item-shop: "MHF_Villager"
+  upgrade-shop: "MHF_Villager"
+lobby-shop-item:
+  name: "&aBoutique Cosmétiques"
+  lore:
+    - "&7Clique-droit pour ouvrir"
+  skin: "MHF_Chest"
