--- a/src/main/resources/shop.yml
+++ b/src/main/resources/shop.yml
@@ -749,7 +749,7 @@ shop-categories:
           amount: 1
         slot: 11
         potion-effects:
-          - type: JUMP
+          - type: JUMP_BOOST
             duration: 45
             amplifier: 2
       'invisibility_potion':
